<resources>
    <string name="app_name">Bazaar</string>
    <string name="profile_image">User profile image</string>

    <!--======================== Bottom Navigation ======================-->
    <string name="nav_people">People</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_wallet">Wallet</string>

    <string name="btn_restore">Restore Password</string>
    <string name="btn_register">Sign up</string>
    <string name="hint_et_email">Email</string>
    <string name="hint_et_pass">Password</string>
    <string name="signin">Sign in</string>
    <string name="tv_restore_prompt">Forgot password?</string>
    <string name="retrieve_action">Retrieve</string>
    <string name="btn_facebook">Facebook Login</string>
    <string name="btn_google">Google Login</string>
    <string name="tv_signin">Already have an account?</string>
    <string name="hint_et_name">Name</string>
    <string name="err_et_pass">password must be 4 characters long</string>
    <string name="err_et_email">email required</string>
    <string name="hint_et_confirm_pass">Confirm Password</string>
    <string name="hint_et_first_name">First Name</string>
    <string name="hint_et_last_name">Last Name</string>
    <string name="err_et_first_name">first name required</string>
    <string name="err_et_last_name">last name required</string>
    <string name="err_et_confirm_pass">password does not match</string>
    <string name="signup_success">Signup successful!</string>
    <string name="signup_fail">Something went wrong!</string>
    <string name="login_fail">Unauthorized!</string>

    <string name="error_invalid_email">Invalid email address</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="app_label">Search</string>
    <string name="search_radio_options">I want to</string>
    <string name="search_hint">People, skills...</string>
    <string name="request_exchange">Request Exchange</string>
    <string name="skill_label">Skills</string>
    <string name="interest_label">Interests</string>
    <string name="about_label">About me</string>
    <string name="retry">Retry</string>
    <string name="network_error_info">Unable to connect. Please try again</string>
    <string name="search_give">Give</string>
    <string name="search_receive">Receive</string>
    <string name="search_exchange">Exchange</string>
    <string name="search_query_hint">Search for skill</string>
    <string name="search_skill_label">Skill</string>
    <string name="search_skill_category_label">Categories</string>
    <string name="search_distance_prompt">Distance</string>
    <string name="search_apply_filter">Apply filter</string>
    <string name="dialog_surprise_me">Surprise me!</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="default_skill_count">0</string>
    <string name="default_skill_count_label">skills</string>
    <string name="user_profile_image">User profile image</string>
    <string name="facebook_login">Facebook Login Image</string>
    <string name="gplus_login">Google plus image login</string>

    <!-- OnBoarding Strings -->
    <string name="section_1_header">Welcome to Bazaar</string>
    <string name="section_1_description">A place for empowerment for both locals and newcomers</string>
    <string name="section_2_header">Share a Skill</string>
    <string name="section_2_description">
        We currently offer over 30 skills ranging from leisure activities to professional competencies
    </string>
    <string name="section_3_header">Time Banking</string>
    <string name="section_3_description">
        With time banking skill exchange is fair and flexible
    </string>
    <string name="section_4_header">Our Vision</string>
    <string name="section_4_description">
        To create a network where everyone can offer what they are good at
    </string>
    <string name="indicator">Slider Indicator</string>
    <string name="location_label">Location</string>
    <string name="hometown_label">Hometown</string>

    <!-- Wallet filter buttons -->
    <string name="btn_proposed">Proposed</string>
    <string name="btn_upcoming">Upcoming</string>
    <string name="btn_complete">Complete</string>


    <string name="dummy">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
        ut aliquip ex ea commodo consequat
    </string>

    <plurals name="skill_count_label">
        <item quantity="zero">skill</item>
        <item quantity="one">skill</item>
        <item quantity="other">skills</item>
    </plurals>
</resources>
