<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_search_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_query_hint"/>
    
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <RadioButton
            android:id="@+id/rd_search_give"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_give"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/rd_search_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_receive"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/rd_search_exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_exchange"
            android:layout_weight="1"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/search_distance_prompt"/>

        <SeekBar
            android:id="@+id/sb_search_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:max="50"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_apply_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_apply_filter"
        android:layout_marginTop="20dp"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        android:background="@drawable/custom_button"/>

</LinearLayout>