<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context="eu.shareonbazaar.dev.bazaar.ui.IndividualProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingStart="40dp"
            android:paddingLeft="40dp">

            <ImageView
                android:id="@+id/img_profile_user_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/profile_image"
                android:scaleType="fitXY"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_profile_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:textSize="20sp"
                    android:text="JOHN Doe"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/location_label"/>

                <TextView
                    android:id="@+id/tv_profile_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/hometown_label"/>
                <TextView
                    android:id="@+id/tv_profile_hometown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:text="hometown"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:text="@string/about_label"/>

                <TextView
                    android:id="@+id/tv_about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skill_label"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_skills_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interest_label"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_interest_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <Button
                android:id="@+id/btn_request_exchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/color_white"
                android:textSize="15sp"
                android:background="@drawable/custom_button"
                android:text="@string/request_exchange"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
